# DataEntryForms

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: README.md  __init__.py  app.py  auth.py  database.py  main.py  models.py  notifications.py  pdf_ingest.py  realtime.py  requirements.txt  server.py
backend/app/: database.py  exports.py  main.py  models.py  reporting.py  scheduler.py  schemas.py  security.py
backend/chat/: models.py  service.py
backend/models/: forms.py
backend/tests/: conftest.py  test_api.py  test_chat.py  test_exports.py  test_reporting.py
fastapi/: __init__.py  testclient.py
frontend/: index.html  package.json
frontend/reports/: index.html  reports.js  styles.css
frontend/src/: App.jsx
frontend/src/components/: AssignmentDashboard.jsx  FormRenderer.jsx
frontend/src/hooks/: useAutosaveResponse.js
frontend/src/styles/: global.css
tests/: test_form_progress.py
